<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TextView Sample</string>
    <string name="text_hello">Text from res/values/string.xml</string>
    <string name="CredSum">Введите сумму</string>
    <string name="percent">Процентную ставку</string>
    <string name="payout_duration">Срок кредитования</string>
    <string name="date_of_start">Начало выплат</string>
    <string name="toolbarTitle">Кредитный калькулятор</string>
    <string name="need_to_calculate">Хочу расчитать</string>
    <string name="month_pay">Ежемесячный платёж</string>
    <string name="annuitet">Аннуитетный</string>
    <string name="difference">Диффиренцированный</string>
    <string name="calculate">Расчитать</string>
    <string name="extra_payment">Расчитать досрочное погашение</string>
    <string-array name="spinner_strings">
        <item>Месячный платёж</item>
        <item>Срок выплаты</item>
        <item>Сумму кредита</item>
    </string-array>
    <string-array name="spinner_payout_dur">
        <item>месяцев</item>
        <item>лет</item>
    </string-array>
    <string name="payout_duration_months_less_5">месяца</string>
    <string name="payout_duration_years_1">год</string>
    <string name="payout_duration_years_less_5">года</string>
    <string name="credit_sum_4_result">Сумма кредита</string>
    <string name="percent_4_result">Процентная ставка</string>
    <string name="payout_duration_4_result">Срок кредита</string>
    <string name="date_of_start_4_result">Дата начала выплат</string>
    <string name="monthly_payment_4_result">Ежемесячный платёж</string>
    <string name="all_percents_4_result">Переплата по процентам</string>
    <string name="full_payment_4_result">Общая сумма выплат</string>
    <string name="date_of_last_payment_4_result">Дата последней выплаты</string>
    <string name="fragment_show_results">Результат</string>
    <string name="fragment_graph">График выплат</string>
    <string name="extra_payments_add_sum">Сумма</string>
    <string name="extra_payments_add_date">Дата</string>
    <string name="extra_payments_add_interval_text">Повторить платёж</string>
    <string name="extra_payments_add_reduce_amount_rg">Уменьшить платёж</string>
    <string name="extra_payments_add_short_term_rg">Уменьшить срок выплаты</string>
    <string-array name="extra_payments_add_interval">
        <item>Не повторять</item>
        <item>Ежемесячно</item>
        <item>Раз в 3 месяца</item>
        <item>Раз в 6 месяцев</item>
        <item>Раз в год</item>
    </string-array>
    <string name="result_graph_date">Дата</string>
    <string name="result_graph_pure_payment">Основной долг</string>
    <string name="result_graph_percents">Переплата</string>
    <string name="result_graph_full_payment">Ежемесячный платёж</string>
    <string name="result_graph_credit_sum">Остаток долга</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>