<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexGens.results.ShowResultsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Basic"
            android:background="@drawable/rectangle"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/result_values"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:text="@string/credit_sum_4_result"/>

                <TextView
                    android:id="@id/result_credit_Sum_id"
                    style="@style/result_values"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/result_values"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:text="@string/percent_4_result"/>

                <TextView
                    android:id="@id/result_percent_id"
                    style="@style/result_values"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/result_values"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:text="@string/payout_duration_4_result" />

                <TextView
                    android:id="@id/result_payout_duration_id"
                    style="@style/result_values" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/result_values"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:text="@string/date_of_start_4_result">

                </TextView>

                <TextView
                    android:id="@id/result_date_of_start_id"
                    style="@style/result_values" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            style="@style/Basic"
            android:background="@drawable/rectangle"
            android:padding="8dp">

            <TextView
                style="@style/result_values.black_text"
                android:gravity="start"
                android:text="@string/monthly_payment_4_result" />

            <TextView
                android:id="@+id/monthly_pay_field_4_id"
                style="@style/result_values"/>


            <TextView
                style="@style/result_values.black_text"
                android:gravity="start"
                android:text="@string/all_percents_4_result" />

            <TextView
                android:id="@+id/all_percents_field_id"
                style="@style/result_values"
                android:text="boom"/>


            <TextView
                style="@style/result_values.black_text"
                android:gravity="start"
                android:text="@string/full_payment_4_result" />

            <TextView
                android:id="@+id/full_payment_id"
                style="@style/result_values"/>


            <TextView
                style="@style/result_values.black_text"
                android:gravity="start"
                android:text="@string/date_of_last_payment_4_result" />

            <TextView
                android:id="@+id/date_of_last_payment_id"
                style="@style/result_values"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>