<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/toolbarTitle"
                android:textStyle="bold"
                android:textSize="22sp">

            </TextView>


        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
    </LinearLayout>

    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/CredSum"
                android:layout_gravity="center">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="8dp"
            android:layout_height="fill_parent">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="fill_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:id="@+id/creditSumId"></EditText>
        </LinearLayout>





        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="8dp">

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="57"
                android:id="@+id/seekBar">

            </SeekBar>
            <TextView
                android:layout_width="120dp"
                android:text="0"
                android:layout_height="wrap_content"
                android:id="@+id/SeekBarNumber">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="8dp"
            >

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/percent"
                android:inputType="numberDecimal"
                android:id="@+id/procentXML">
            </EditText>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Расчитать"
                android:id="@+id/calculationXML">

            </Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultXML">

        </TextView>

    </LinearLayout>
</LinearLayout>